文字列の外部リソース化対応

--- a/sound-app/src/main/resources/messages.properties
+++ b/sound-app/src/main/resources/messages.properties
@@ -1,1 +1,23 @@
+track=トラック
+title=タイトル
+artist=アーティスト
+disc=ディスク
+album=アルバム
+albumArtist=アルバムアーティスト
+trackLength=トラック長
+format=フォーマット
+sampleRate=サンプリングレート
+bitRate=ビットレート
+channels=チャンネル数
+
+onSelectDirectory.text=ディレクトリ追加
+onSelectFile.text=ファイル追加
+onStart.text=開始
+onStop.text=終了
+onBack.text=前へ
+onSkip.text=次へ
+onClear.text=クリア
+historyDateTimeColumn.text=時刻
+historyValueColumn.text=内容
+
 message.uncaughtException=処理されない例外が発生しました。
