文言の微修正

--- a/sound-app/src/main/resources/messages.properties
+++ b/sound-app/src/main/resources/messages.properties
@@ -18,6 +18,6 @@ onBack.text=前へ
 onSkip.text=次へ
 onClear.text=クリア
 historyDateTimeColumn.text=時刻
-historyValueColumn.text=内容
+historyValueColumn.text=情報
 
 message.uncaughtException=処理されない例外が発生しました。
